# QuorumTrust

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BOUNTY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FIX_PROPOSAL.md  LICENSE  Makefile  README.md  SECURITY.md  TUTORIAL.md  clippy.toml  deny.toml  init_tutorial.sh  rustfmt.toml
.github/workflows/: ci.yml
quorum-trust/: Cargo.toml
quorum-trust-gui/: jest.config.cjs  package-lock.json  package.json  server.js
quorum-trust-gui/public/: index.html
quorum-trust-gui/public/css/: style.css
quorum-trust-gui/public/js/: app.js
quorum-trust-gui/test/: multi_gui_e2e.test.js
quorum-trust/src/: config.rs  lib.rs  main.rs
quorum-trust/src/cli/: commands.rs
quorum-trust/src/crypto/: encrypted_channel.rs  frost.rs  identity.rs  mod.rs  threshold.rs
quorum-trust/src/document/: diff.rs  manager.rs  mod.rs  versioning.rs
quorum-trust/src/governance/: membership.rs  mod.rs  persistence.rs  voting.rs
quorum-trust/src/network/: compress.rs  gossip.rs  messages.rs  mod.rs  peer_discovery.rs  quorum_object.rs
quorum-trust/src/rpc/: mod.rs  server.rs
quorum-trust/tests/: e2e_multinode.rs  frost_threshold_test.rs  full_stack_gui.rs  integration_test.rs  rpc_integration_test.rs
