[package]
name = "quorum-trust"
version = "0.1.0"
edition = "2021"
description = "Decentralized collaborative editing and signing of Markdown documents using Threshold Cryptography"
license = "Apache-2.0"

[lib]
name = "quorum_trust"
path = "src/lib.rs"

[[bin]]
name = "quorum-trust"
path = "src/main.rs"

[dependencies]
# Chaincraft for decentralized networking (0.2.4+ with proper UDP networking)
chaincraft = { path = "../../chaincraft-rust" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography (FROST Ed25519 via thetacrypt)
theta_schemes = { git = "https://github.com/jose-blockchain/thetacrypt" }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
log = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
curve25519-dalek = { version = "4", features = ["digest"] }

# RPC server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Diff and patching
similar = "2.3"
diffy = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
base64 = "0.21"
toml = "0.8"

# File watching
notify = "6.1"
flate2 = "1.1.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[lints]
workspace = true
